--- a/index.html
+++ b/index.html
@@ -1,182 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAT Cargo VAD LLC</title>
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            color: #333;
-        }
-        nav {
-            background: #000;
-            color: #fff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-        nav .logo {
-            font-size: 24px;
-            font-weight: bold;
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            margin: 0;
-            padding: 0;
-        }
-        nav ul li {
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 16px;
-        }
-        .hero {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            padding: 80px 20px;
-            background: #111;
-            color: #fff;
-            min-height: 100vh;
-            animation: fadeIn 2s ease-in-out;
-        }
-        .hero-text {
-            max-width: 500px;
-            padding: 20px;
-            animation: slideInLeft 1.5s ease;
-        }
-        .hero-text h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-        }
-        .hero-text p {
-            font-size: 18px;
-            line-height: 1.6;
-        }
-        .hero-img img {
-            max-width: 400px;
-            width: 100%;
-            border-radius: 10px;
-            animation: slideInRight 1.5s ease;
-        }
-        .section {
-            padding: 60px 20px;
-            text-align: center;
-            max-width: 900px;
-            margin: 0 auto;
-            opacity: 0;
-            transform: translateY(50px);
-            transition: all 1s ease;
-        }
-        .section.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .section h2 {
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-        .section p {
-            font-size: 18px;
-            line-height: 1.8;
-            color: #555;
-        }
-        .contact {
-            background: #e9e9e9;
-            padding: 60px 20px;
-        }
-        footer {
-            background: #000;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            font-size: 14px;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        @keyframes slideInLeft {
-            from { transform: translateX(-50px); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
-        @keyframes slideInRight {
-            from { transform: translateX(50px); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AMIBIS LTD EOOD</title>
+  <style>
+    body { margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(to right, #f0f4f8, #ffffff); color: #2b2b2b; }
+    header, footer { background: #0d3b66; color: #fff; padding: 40px 20px; text-align: center; }
+    .section { padding: 60px 30px; display: grid; grid-template-columns: 1fr 1fr; gap: 40px; align-items: center; border-bottom: 1px solid #ddd; }
+    .section:nth-child(even) { background-color: #f9fafc; }
+    .section img { width: 100%; border-radius: 14px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
+    .text-block { padding: 0 10px; }
+    h2 { color: #0d3b66; font-size: 28px; }
+    footer p { font-size: 14px; }
+    @media (max-width: 768px) {
+      .section { grid-template-columns: 1fr; text-align: center; }
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>AMIBIS LTD EOOD</h1>
+    <p>admin@amibiseood.shop | +359888079245</p>
+  </header>
 
-    <nav>
-        <div class="logo">PAT Cargo VAD LLC</div>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <div class="hero" id="home">
-        <div class="hero-text">
-            <h1>PAT Cargo VAD LLC</h1>
-            <p>Your trusted partner in transportation and warehousing. We provide reliable cargo services and storage solutions to meet your business needs with efficiency and care.</p>
-        </div>
-        <div class="hero-img">
-            <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?ixlib=rb-4.0.3&auto=format&fit=crop&w=934&q=80" alt="Cargo Services">
-        </div>
+  <div class="section">
+    <img src="https://source.unsplash.com/600x400/?restaurant" alt="Restaurant">
+    <div class="text-block">
+      <h2>About Us</h2>
+      <p>AMIBIS LTD EOOD is a food services company based in Medovina, Popovo, Bulgaria. We specialize in restaurant management and food services, delivering quality experiences that blend traditional cuisine with modern comfort.</p>
     </div>
+  </div>
 
-    <div class="section" id="about">
-        <h2>About Us</h2>
-        <p>PAT Cargo VAD LLC is a Domestic LLC based in Arizona, offering specialized services in transportation and warehousing. With a focus on reliability and customer satisfaction, we have been serving businesses since 2021.</p>
-        <p><strong>Registered Address:</strong><br>
-        2902 W Sweetwater Ave, Apt 2190, Phoenix, AZ 85029, United States</p>
+  <div class="section">
+    <img src="https://source.unsplash.com/600x400/?food" alt="Food">
+    <div class="text-block">
+      <h2>Our Cuisine</h2>
+      <p>Our culinary approach focuses on fresh ingredients, seasonal menus, and diverse flavors. We bring together local and international tastes to satisfy every palate with consistency and creativity.</p>
     </div>
+  </div>
 
-    <div class="section contact" id="contact">
-        <h2>Contact Us</h2>
-        <p><strong>Email:</strong> <a href="mailto:contact@patcargovadllc.click">contact@patcargovadllc.click</a></p>
-        <p><strong>Agent Address:</strong><br>
-        2902 W Sweetwater Ave, Apt 2190, Phoenix, AZ 85029, United States</p>
+  <div class="section">
+    <img src="https://source.unsplash.com/600x400/?chef" alt="Chef Team">
+    <div class="text-block">
+      <h2>Our Team</h2>
+      <p>Led by experienced chefs and a dedicated hospitality staff, our team ensures exceptional service and memorable dining experiences. We believe in teamwork, quality, and client satisfaction.</p>
     </div>
+  </div>
 
-    <footer>
-        &copy; 2025 PAT Cargo VAD LLC. All rights reserved.
-    </footer>
+  <div class="section">
+    <img src="https://source.unsplash.com/600x400/?restaurant-interior" alt="Interior">
+    <div class="text-block">
+      <h2>Our Space</h2>
+      <p>Our venue is designed for comfort and style — ideal for families, business meetings, and social gatherings. The ambiance is modern, welcoming, and tailored to make every visit special.</p>
+    </div>
+  </div>
 
-    <script>
-        // Intersection Observer for fade-in effect
-        const sections = document.querySelectorAll('.section');
-        const observer = new IntersectionObserver(entries => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('visible');
-                }
-            });
-        }, {
-            threshold: 0.1
-        });
+  <div class="section">
+    <img src="https://source.unsplash.com/600x400/?catering" alt="Catering">
+    <div class="text-block">
+      <h2>Catering Services</h2>
+      <p>AMIBIS LTD EOOD also offers catering for private and corporate events. From intimate dinners to large-scale receptions, our team provides tailored menus and impeccable execution.</p>
+    </div>
+  </div>
 
-        sections.forEach(section => {
-            observer.observe(section);
-        });
-    </script>
+  <div class="section">
+    <img src="https://source.unsplash.com/600x400/?contact-us" alt="Contact">
+    <div class="text-block">
+      <h2>Contact</h2>
+      <p>Visit us at: <strong>10 Mara Taseva Blvd., Medovina, Popovo, 7863, Bulgaria</strong><br>
+      Email: <strong>admin@amibiseood.shop</strong><br>
+      Phone: <strong>+359888079245</strong></p>
+    </div>
+  </div>
 
+  <footer>
+    <p>© 2025 AMIBIS LTD EOOD – Popovo, Bulgaria</p>
+  </footer>
 </body>
 </html>
